Default value for namespace
This makes the caller less verbose.

--- a/selfsigned-ca-init/action.yaml
+++ b/selfsigned-ca-init/action.yaml
@@ -21,7 +21,8 @@ inputs:
     default: ''
   namespace:
     description: Namespace where certificates will be created
-    required: true
+    required: default
+    default: default
 
 runs:
   using: composite
