--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,6 +7,8 @@ on:
 jobs:
 
   lint:
+
+    # TEMPORAL
     #runs-on: self-hosted
     runs-on: ubuntu-latest
     steps:
@@ -15,7 +17,7 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: '1.17.5'
-      - run: | 
-          go version
-          go install github.com/rhysd/actionlint/cmd/actionlint@latest
-          actionlint    
+      - name: Install actionlint
+        run: go install github.com/rhysd/actionlint/cmd/actionlint@latest
+      - name: Run actionlint    
+        run: actionlint -version   
