--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,11 +13,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Setup go
-        uses: actions/setup-go@v3
-        with:
-          go-version: '1.17.5'
-      - name: Install actionlint
-        run: go install github.com/rhysd/actionlint/cmd/actionlint@latest
-      - name: Run actionlint    
-        run: actionlint -version   
+      - uses: reviewdog/action-actionlint@v1
+      #- name: Setup go
+      #  uses: actions/setup-go@v3
+      #  with:
+      #    go-version: '1.17.5'
+      #- name: Install actionlint
+      #  run: go install github.com/rhysd/actionlint/cmd/actionlint@latest
+      #- name: Run actionlint    
+      #  run: actionlint -version
+      #- name: Run actionlint
+
