--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,14 +13,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: reviewdog/action-actionlint@v1
-      #- name: Setup go
-      #  uses: actions/setup-go@v3
-      #  with:
-      #    go-version: '1.17.5'
-      #- name: Install actionlint
-      #  run: go install github.com/rhysd/actionlint/cmd/actionlint@latest
-      #- name: Run actionlint    
-      #  run: actionlint -version
       #- name: Run actionlint
-
+      #  uses: reviewdog/action-actionlint@v1
+      - name: Setup go
+        uses: actions/setup-go@v3
+        with:
+          go-version: '1.17.5'
+      - name: Install actionlint
+        run: go install github.com/rhysd/actionlint/cmd/actionlint@latest
+      - name: Run actionlint
+        run: | 
+          cat setup-kind/action.yaml | actionlint -
+      
