--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,15 +13,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Run yaml lint
+        uses: karancode/yamllint-github-action@v2.0.0
+        with: 
+          yamllint_file_or_dir: 'setup-kind'
+          yamllint_strict: true
+          yamllint_comment: true
+
       #- name: Run actionlint
       #  uses: reviewdog/action-actionlint@v1
-      - name: Setup go
-        uses: actions/setup-go@v3
-        with:
-          go-version: '1.17.5'
-      - name: Install actionlint
-        run: go install github.com/rhysd/actionlint/cmd/actionlint@latest
-      - name: Run actionlint
-        run: | 
-          cat setup-kind/action.yaml | actionlint -
+      #- name: Setup go
+      #  uses: actions/setup-go@v3
+      #  with:
+      #    go-version: '1.17.5'
+      #- name: Install actionlint
+      #  run: go install github.com/rhysd/actionlint/cmd/actionlint@latest
+      #- name: Run actionlint
+      #  run: | 
+      #    cat setup-kind/action.yaml | actionlint -
       
