--- a/.yamllint.yaml
+++ b/.yamllint.yaml
@@ -1,15 +1,12 @@
 extends: default
 
-rules:
-  # 80 chars should be enough, but don't fail if a line is longer
-  line-length:
-    max: 80
-    level: warning
+ignore: |
+  .yamllint.yaml
 
-  # accept both     key:
-  #                   - item
-  #
-  # and             key:
-  #                 - item
+rules:
+  truthy: disable
+  line-length:
+    max: 160
+    level: warning
   indentation:
     indent-sequences: whatever
