--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,4 +16,4 @@ jobs:
         with:
           yamllint_strict: false
           yamllint_config_filepath: ./.yamllint.yaml
-          yamllint_comment: false
+          yamllint_comment: true
