Commented timeout-minutes

--- a/oss-license-check-libs/action.yaml
+++ b/oss-license-check-libs/action.yaml
@@ -73,7 +73,7 @@ runs:
         UPLOAD_ID: ${{ steps.upload.outputs.id }}
         FOSSOLOGY_ENDPOINT: ${{ inputs.fossologyEndpoint }}
         TOKEN:  ${{ inputs.fossologyToken }}
-      timeout-minutes: 3
+      #timeout-minutes: 3
       run: |
         until curl -fsSL -o upload.json ${FOSSOLOGY_ENDPOINT}/api/v1/uploads/${UPLOAD_ID} -H "Authorization: Bearer ${TOKEN}"; do \
           sleep 6
@@ -121,7 +121,7 @@ runs:
         JOB_ID: ${{ steps.analysis.outputs.id }}
         FOSSOLOGY_ENDPOINT: ${{ inputs.fossologyEndpoint }}
         TOKEN: ${{ inputs.fossologyToken }}
-      timeout-minutes: 5
+      #timeout-minutes: 5
       run: |
         STATUS=Processing
         while ( [ "$STATUS" = "Processing" ] || [ "$STATUS" = "Queued" ] ); do
