DO-1987 Overwrite assets uploaded to the github release

--- a/oss-license-check-docker/action.yaml
+++ b/oss-license-check-docker/action.yaml
@@ -142,4 +142,5 @@ runs:
         repo_token: ${{ inputs.githubToken }}
         file: license-report-docker.tar.gz
         asset_name: license-report-docker.tar.gz
+        overwrite: true
         tag: ${{ inputs.tag }}
