--- a/oss-license-check-libs/action.yaml
+++ b/oss-license-check-libs/action.yaml
@@ -185,6 +185,7 @@ runs:
         repo_token: ${{ inputs.githubToken }}
         file: license-report-libs.tar.gz
         asset_name: license-report-libs.tar.gz
+        overwrite: true
         tag: ${{ inputs.tag }}
 
     - name: Delete upload
