--- a/.github/workflows/update-helmchart-dependencies.yaml
+++ b/.github/workflows/update-helmchart-dependencies.yaml
@@ -37,7 +37,7 @@ jobs:
         uses: renovatebot/github-action@v40.2.10
         env:
           # I needed to set this here or it wouldn't take the credentials in chart-renovate.json
-          RENOVATE_HOST_RULES: '[{"hostType": "docker", "matchHost": "${{ inputs.registry }}", "username": "${{ inputs.registry-user }}", "password":"${{ secrets.registry-password }}"}]'
+          RENOVATE_HOST_RULES: '[{"hostType": "docker", "matchHost": "${{ inputs.registry }}", "username": "${{ secrets.registry-user }}", "password":"${{ secrets.registry-password }}"}]'
           RENOVATE_REPOSITORIES: ${{ github.repository }}
           RENOVATE_USERNAME: "midojenkins[bot]"
           RENOVATE_GIT_AUTHOR: "midojenkins <midojenkins[bot]@users.noreply.github.com>"
