--- a/.github/workflows/update-helmchart-dependencies.yaml
+++ b/.github/workflows/update-helmchart-dependencies.yaml
@@ -32,6 +32,9 @@ jobs:
           repository: midokura/gha-devops
           ref: update-chart-deps-workflow
           path: reusable
+
+      - name: Debug
+        run: tree
         
       - name: Run Renovate
         uses: renovatebot/github-action@v40.2.10
