Validate renovate config

--- a/.github/workflows/ci-update-helmchart-deps.yaml
+++ b/.github/workflows/ci-update-helmchart-deps.yaml
@@ -26,3 +26,7 @@ jobs:
       uses: raven-actions/actionlint@v2
       with: 
         files: '.github/workflows/update-helmchart-dependencies.yaml'
+    - name: Validate renovate config
+      uses: suzuki-shunsuke/github-action-renovate-config-validator@v1.0.1
+      with: 
+        config_file_path: .github/chart-renovate.json5
